fix shape and horizontal scroll

--- a/styles.scss
+++ b/styles.scss
@@ -78,11 +78,12 @@ $nav-underline-link-active-color: map-get($theme-colors, "secondary");
 
 .illustration-container {
   position: relative;
+  overflow: hidden;
   .hero-banner-shape {
     position: absolute;
     bottom: 5%;
-    left: 20%;
-    width: 150%;
+    left: 30%;
+    width: 100%;
     height: 80%;
     background-color: $primary;
     z-index: -1;
@@ -92,10 +93,11 @@ $nav-underline-link-active-color: map-get($theme-colors, "secondary");
 
 .bookmarking-container {
   position: relative;
+  overflow: hidden;
   .features-shape {
     position: absolute;
-    bottom: -10%;
-    right: 35%;
+    bottom: 0;
+    right: 30%;
     width: 150%;
     height: 80%;
     background-color: $primary;
